testdata/parser/negative/29.pdl
#version 100

int main(int a) {
    int[] x = {};
    ++(x[0..5][2 - x[0]].length); // not assignable
    return x;
}